# lucky_bea

./: .gitignore  .laser_camera_pkalman.txt.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  cmake_install.cmake  diferencias_atan2.txt  identificacion.txt  laser_camera.txt  laser_camera_ekf.txt  laser_camera_ekf_manual.txt  laser_camera_ekf_test_1.txt  laser_camera_ekf_test_2.txt  laser_camera_ekf_test_3.txt  laser_camera_eskf.txt  laser_camera_pkalman.txt  laser_camera_pkalman.txt.save  laser_camera_static.txt  laser_camera_ukf.txt  laser_camera_ukf_manual.txt  laser_camera_ukf_test_1.txt  laser_camera_ukf_test_2.txt  laser_camera_ukf_test_3.txt  laser_camera_ukf_test_4.txt  laser_camera_ukf_test_5.txt  laser_camera_uskf.txt  laser_log.txt  laser_measures.txt  libaria.rdmanifest  localization-data.txt  lucky_bea  medidas_balizas_victor.txt  medidas_sensores_pkalman.txt  output_fuzzy.txt  package.xml  rosaria.rdmanifest  solo_camara.txt  solo_camera.txt  solo_camera_def.txt  (+6 more)
conf/: BeaArm.xml  BeaConSuerte.xml  BeaDialogsES.xml  BeaFaceMotorRanges.xml  BeaImpulses.xml  BeaInputMessages.xml  BeaInputOutput.xml  BeaLipSync.xml  BeaMaps.xml  BeaOutputMessages.xml  BeaRobotConfig.xml  BeaSectors.xml  BeaTagsList.xml  BeaVisemeCodes.xml
dependencies/: RosAria.cpp  rosstart
include/: AntennaData.h  AntennaDataList.h  DorisLipSync.h  FRMotorsList.h  FaceGesture.h  GeneralController.h  MapSector.h  Matrix.h  RNActionGoto.h  RNArmTask.h  RNAsyncTask.h  RNCameraTask.h  RNDialogsTask.h  RNDistanceTimerTask.h  RNDualNumber.h  RNDualQuaternion.h  RNEkfTask.h  RNEmotionsTask.h  RNEskfTask.h  RNFactorySensorsTask.h  RNFunPointer.h  RNFuzzyDNC.h  RNFuzzyHallDNC.h  RNFuzzySpeedControl.h  RNFuzzySpeedController.h  RNGesturesTask.h  RNGlobalLocalizationTask.h  RNGraph.h  RNHallwayController.h  RNKalmanLocalizationTask.h  RNLandmark.h  RNLandmarkList.h  RNLaserTask.h  RNLocalizationTask.h  RNOmnicameraTask.h  RNPFLocalizationTask.h  RNPIDController.h  RNPKalmanLocalizationTask.h  RNPkfTask.h  RNQuaternion.h  (+26 more)
include/JSON/: JSONObject.h
include/arm/: Arm.h  DynamixelMotor.h  Finger.h  Hand.h
include/crypt/: base64.h
include/dynamixel/dynamixel_sdk_linux/: port_handler_linux.h
include/fl/: FLUtils.h  constants.h  fuzzy.h  fuzzyStats.h  system.h
include/fl/defuzzifier/: bisector.h  centroid.h  defuzzifier.h  largestOfMaximum.h  meanOfMaximum.h  smallestOfMaximum.h  weightedAverage.h  weightedSum.h
include/fl/mf/: constant.h  gaussBell.h  gaussProduct.h  gaussian.h  linear.h  mf.h  piShape.h  sShape.h  sigmoid.h  sigmoidDifference.h  sigmoidProduct.h  trapezoid.h  triangle.h  zShape.h
include/fl/norm/: norm.h  snorm.h  tnorm.h
include/fl/norm/s/: SNHamacher.h  SNLukasiewicz.h  SNProbabilistic.h  SNWeber.h  SNZadeh.h
include/fl/rule/: antecedent.h  consequent.h  expression.h  rule.h  ruleblock.h
include/fl/variable/: inputVariable.h  outputVariable.h  variable.h
include/rfid/: ltkcpp_connection.h  ltkcpp_platform.h  out_impinj_ltkcpp.h  out_ltkcpp.h  version.inc
lib/: fuzzylite  fuzzylite-tests  libfuzzylite.so.6.0  libltkcpp_r.lib
lucky_bea.xcworkspace/xcuserdata/bielpieroeloy.xcuserdatad/: UserInterfaceState.xcuserstate
maps/: 00 - BeaMain.xml  01 - BeaDisam.xml  02 - BeaLcoe.xml
nbproject/: configurations.xml  project.xml
nbproject/private/: configurations.xml  private.xml
src/: DorisLipSync.cpp  DorisLipSync.h  GeneralController.cpp  GeneralController.h  MapSector.cpp  Matrix.cpp  Matrix.h  RNActionGoto.cpp  RNActionGoto.h  RNArmTask.cpp  RNAsyncTask.cpp  RNCameraTask.cpp  RNDialogsTask.cpp  RNDistanceTimerTask.cpp  RNDualNumber.cpp  RNDualQuaternion.cpp  RNEkfTask.cpp  RNEmotionsTask.cpp  RNEskfTask.cpp  RNFactorySensorsTask.cpp  RNFuzzyDNC.cpp  RNFuzzyHallDNC.cpp  RNFuzzySpeedControl.cpp  RNFuzzySpeedController.cpp  RNGesturesTask.cpp  RNGlobalLocalizationTask.cpp  RNGraph.cpp  RNHallwayController.cpp  RNKalmanLocalizationTask.cpp  RNLaserTask.cpp  RNLocalizationTask.cpp  RNOmnicameraTask.cpp  RNPFLocalizationTask.cpp  RNPIDController.cpp  RNPKalmanLocalizationTask.cpp  RNPkfTask.cpp  RNQuaternion.cpp  RNRFIdentificationTask.cpp  RNRecurrentTask.cpp  RNRecurrentTaskMap.cpp  (+32 more)
src/arm/: Arm.cpp  DynamixelMotor.cpp  Finger.cpp  Hand.cpp
src/conf/: BeaConSuerte.xml  BeaRobotConfig.xml  BeaSectors.xml
src/crypt/: base64.cpp  sha.cpp  sha.h  sha512.cpp  sha512.h
src/fl/: FLUtils.cpp  constants.h  fuzzy.h  fuzzyStats.cpp  fuzzyStats.h  system.cpp  system.h
src/fl/defuzzifier/: bisector.cpp  bisector.h  centroid.cpp  centroid.h  largestOfMaximum.cpp  largestOfMaximum.h  meanOfMaximum.cpp  meanOfMaximum.h  smallestOfMaximum.cpp  smallestOfMaximum.h  weightedAverage.cpp  weightedAverage.h  weightedSum.cpp  weightedSum.h
src/fl/mf/: constant.cpp  constant.h  gaussBell.cpp  gaussBell.h  gaussProduct.cpp  gaussProduct.h  gaussian.cpp  gaussian.h  gaussian.h~  linear.cpp  linear.cpp~  linear.h  linear.h~  mf.cpp  mf.cpp~  mf.h  mf.h~  piShape.cpp  piShape.h  sShape.cpp  sShape.h  sigmoid.cpp  sigmoid.h  sigmoidDifference.cpp  sigmoidDifference.h  sigmoidProduct.cpp  sigmoidProduct.h  trapezoid.cpp  trapezoid.cpp~  trapezoid.h  trapezoid.h~  triangle.cpp  triangle.h  zShape.cpp  zShape.h
src/fl/rule/: antecedent.cpp  antecedent.h  consequent.cpp  consequent.h  expression.cpp  rule.cpp  rule.h
src/fl/variable/: inputVariable.cpp  inputVariable.h  outputVariable.cpp  outputVariable.h  variable.cpp  variable.h
src/lucky_bea.xcworkspace/: contents.xcworkspacedata
tts/: disam-01.doris  disam-01.text  program.doris  r-moviles.doris  xcar-anniversary.doris
(+16 files in other folders)
